@@ -1,3 +1,8 @@
+2021-03-05  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ganymede/notebook/Notebook.java:
+	Created Notebook @SpringBootApplication to initialize JShell.
+
 2021-03-04  Allen D. Ball  <ball@hcf.dev>
 
 	* src/main/java/ganymede/dependency/Analyzer.java:
